--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -352,7 +352,7 @@ body
             color: rgba(255, 255, 255, 0.84)
 
         .headerIcons
-          padding-top: 60px
+          padding-top: 40px
           display: flex
           flex-direction: column
 
@@ -427,7 +427,7 @@ body
         .swiper-slide
 
           .leasingItem
-            padding: 40px
+            padding: 30px
             height: 100%
             display: grid
             grid-template-columns: 2fr 1fr
@@ -444,25 +444,33 @@ body
 
               .header
                 display: inline-flex
-                margin-bottom: 60px
+                margin-bottom: 48px
 
                 h1
-                  font-size: 40px
+                  font-size: 32px
                   font-family: "Raleway", "sans-serif"
                   font-weight: 600
                   color: rgba(0, 0, 0, 0.90)
                   border-bottom: 4px solid #DA251D
 
               .description
-                margin-top: 40px
                 display: grid
-                grid-template-columns: 30px 1fr
-                grid-row-gap: 30px
+                font-family: "Scada", "sans-serif"
+                color: rgba(0, 0, 0, 0.90)
 
-                p, span
-                  font-size: 27px
-                  font-family: "Scada", "sans-serif"
-                  color: rgba(0, 0, 0, 0.90)
+                h4
+                  margin: 10px 0 20px
+
+                .descriptionItem
+                  margin-bottom: 22px
+
+                  p
+                    font-size: 25px
+                    margin-bottom: 5px
+
+                  span
+                    font-size: 17px
+
 
             .rightSide
               display: flex
@@ -713,6 +721,72 @@ body
         opacity: 1
         transition: 0.2s ease-in
 
+  .docsWrapper
+    display: grid
+    height: 100%
+    grid-template-areas: "docsHeader" "docsBody"
+    grid-template-rows: 100px 1fr
+
+    .choseWrapper
+      display: grid
+      grid-area: docsHeader
+      grid-template-columns: 1fr 1fr
+      grid-gap: 10px
+
+
+      .headerButton
+        width: 100%
+        height: 100%
+        background-color: #E4E5E5
+        display: flex
+        justify-content: center
+        text-align: center
+        align-items: center
+        font-family: "Roboto", "sans-serif"
+        font-size: 17px
+        font-weight: 500
+        line-height: 1.5
+        padding: 0 10px
+
+        .mobile
+          display: none
+
+      .active
+        background-color: #ffffff
+        color: #222
+        cursor: context-menu
+
+      .notActive
+        color: #b3b3b3
+        cursor: pointer
+        transition: all 0.4s ease
+
+        &:hover
+          font-weight: 500
+          color: #222
+
+    .docsBody
+      grid-area: docsBody
+      padding: 50px 25px
+      background-color: #ffffff
+
+      .docsItems
+        font-family: "Roboto", "sans-serif"
+        font-size: 17px
+        padding-left: 40px
+        .mobile
+          display: none
+
+        ul
+          margin-bottom: 30px
+
+          li
+            margin-bottom: 15px
+            list-style-type: decimal
+
+        h3
+          font-weight: 600
+
 @media (max-width: 1600px)
   .appWrapper
     grid-template-columns: 100%
@@ -785,13 +859,19 @@ body
                 .leftSide
                   .header
                     h1
-                      font-size: 35px
+                      font-size: 30px
 
                   .description
-                    grid-row-gap: 20px
+                    h4
+                      margin: 10px 0 40px
 
-                    p, span
-                      font-size: 22px
+                    .descriptionItem
+
+                      p
+                        font-size: 22px
+
+                      span
+                        font-size: 16px
 
       .contactsWrapper
         .contactsHeader
@@ -946,15 +1026,21 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 120px
+                margin-bottom: 60px
 
                 .leftSide
                   .description
-                    grid-row-gap: 25px
+                    h4
+                      font-size: 13px
+                      margin: 0
 
-                    p, span
-                      font-size: 22px
+                    .descriptionItem
 
+                      p
+                        font-size: 20px
+
+                      span
+                        font-size: 15px
 
       .contactsWrapper
         padding: 0 40px
@@ -980,6 +1066,15 @@ body
         .requisitesWrapper
           .generalWrapper
             justify-content: flex-end
+
+      .docsWrapper
+        .choseWrapper
+          .headerButton
+            font-size: 15px
+
+        .docsBody
+          .docsItems
+            font-size: 15px
 
 @media (max-width: 1366px) and (max-height: 800px)
   .appWrapper
@@ -1057,12 +1152,15 @@ body
                 .leftSide
                   .header
                     h1
-                      font-size: 30px
+                      font-size: 27px
 
                   .description
-                    grid-row-gap: 21px
+                    h4
+                      font-size: 14px
 
-                    p, span
+                    .descriptionItem
+
+                      p, span
                       font-size: 20px
 
       .aboutWrapper
@@ -1251,6 +1349,7 @@ body
 
           &.active
             left: 0
+
             .closeCover
               display: block
 
@@ -1460,6 +1559,7 @@ body
 
         .leftSide
           margin-bottom: 30px
+
         .requestForm
           justify-content: center
 
@@ -1946,7 +2046,7 @@ body
               margin-bottom: 40px
 
               .iconItemWrapper
-                padding: 4px 0
+                padding: 8px 0
 
                 .iconItem
                   span
@@ -2072,6 +2172,19 @@ body
         .swiper-container
           .swiper-button-prev, .swiper-button-next
             display: none
+      .docsWrapper
+        .choseWrapper
+          .headerButton
+            .desktop
+              display: none
+            .mobile
+              display: block
+        .docsBody
+          .docsItems
+            padding-left: 20px
+            .mobile
+              margin-bottom: 30px
+              display: block
 
 
 @media (max-width: 520px)
@@ -2167,6 +2280,7 @@ body
       .aboutWrapper
         grid-template-areas: "h h" "l l" "r r"
         padding: 40px 15px
+
       .contactsWrapper
         .contactsContent
           .leftSide
@@ -2189,6 +2303,19 @@ body
           h2
             font-size: 30px
 
+      .docsWrapper
+        .choseWrapper
+          .headerButton
+            .desktop
+              display: none
+            .mobile
+              display: block
+        .docsBody
+          .docsItems
+            padding-left: 20px
+            .mobile
+              margin-bottom: 30px
+              display: block
 
 @media (max-width: 408px)
   .emailFormWrapper
