--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -323,7 +323,7 @@ body
       display: grid
       grid-template-columns: 1fr 1fr
       grid-column-gap: 50px
-      cursor: context-menu
+      cursor: default
       margin-top: 45px
 
       .leftSide
@@ -1162,7 +1162,7 @@ body
                     .descriptionItem
 
                       p, span
-                      font-size: 20px
+                        font-size: 20px
 
       .aboutWrapper
         grid-template-areas: "h h" "l r"
